--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ rpds-py==0.25.1
 scikit-learn==1.3.2
 scipy==1.13.1
 seaborn==0.13.0
-shap==0.44.0[plots]
+shap==0.44.0
 shapely==2.0.7
 six==1.17.0
 slicer==0.0.7
